--- a/BlazorTicTacToe/Pages/Index.razor
+++ b/BlazorTicTacToe/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Tic Tac Toe</h1>
 
-Welcome to your new app.
+<Game></Game>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+
+}
