--- a/BlazorTicTacToe/Shared/Game.razor
+++ b/BlazorTicTacToe/Shared/Game.razor
@@ -1,13 +1,13 @@
 ﻿<div class="d-flex flex-column">
     @if (GameOver)
     {
-        @if (NoWinner)
+        @if (FullBoardNoWinner)
         {
             <h3>No winner this time!</h3>
         }
         else
         {
-            <h3>The Winner Is: @(isXTurn ? "X" : "0")</h3>
+            <h3>The Winner Is: @(isXTurn ? "X" : "O")</h3>
         }
     }
     else
@@ -17,13 +17,13 @@
 
     <div class="d-flex">
         <div class="d-flex flex-column">
-            <Board Values="CurrentValues" OnClick="HandleClick" />
+            <Board Values="CurrentValues" ClickHandler="HandleClick" />
             <button @onclick="ResetBoard" class="btn btn-primary">@(GameOver ? "Play Again?" : "Reset Board")</button>
         </div>
         <div class="d-flex flex-column">
             @for (var i = 1; i < History.Count; i++)
             {
-                int link = i; // I don't know why using i in the lambda doesn't work but this does.
+                int link = i;
                 <button @onclick="() => GoToMove(link)" class="btn btn-secondary m-1">Go to Move #@(i)</button>
             }
         </div>
@@ -42,7 +42,7 @@
 
     public bool GameOver { get; set; }
 
-    public bool NoWinner { get; set; }
+    public bool FullBoardNoWinner { get; set; }
 
     public int MoveCounter { get; set; }
 
@@ -92,7 +92,7 @@
     {
         isXTurn = true;
         GameOver = false;
-        NoWinner = false;
+        FullBoardNoWinner = false;
         ResetValues();
 
         History = new List<string[]>();
@@ -121,11 +121,12 @@
             CheckRow(CurrentValues[0], CurrentValues[4], CurrentValues[8]) || // Diagonals
             CheckRow(CurrentValues[2], CurrentValues[4], CurrentValues[6]))
         {
+            FullBoardNoWinner = false;
             return true;
         }
         else if (!CurrentValues.Any(v => v.Equals("")))
         {
-            NoWinner = true;
+            FullBoardNoWinner = true;
             return true;
         }
         else
@@ -144,7 +145,14 @@
         CurrentValues = GetCopyOf(History[index]);
         MoveCounter = index + 1;
         isXTurn = MoveCounter % 2 != 0;
+
         GameOver = CheckForWin();
+
+        // If the move was a winning move, the winner was actually the previous mover.
+        if (GameOver)
+        {
+            isXTurn = !isXTurn;
+        }
     }
 
     private string[] GetCopyOf(string[] values)
